Refactored the Gradle build file along the lines of what I did for Pinecone Quickstart